@@ -32,4 +32,13 @@ tasks.withType<Test> {
     useJUnitPlatform()
 }
 
+tasks.withType<JavaCompile>().configureEach {
+    options.compilerArgs.add("--enable-preview")
+}
+
+sourceSets {
+    main {
+        resources.setSrcDirs(listOf("src/main/resources"))
+    }
+}
 
